--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_platform_widgets: ^1.20.0
   provider: ^6.0.2
+  google_fonts: ^3.0.0
 
 dev_dependencies:
   flutter_test:
