--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -2,13 +2,11 @@
 FLUTTER_ROOT=/Users/moritakeikuni/development/flutter
 FLUTTER_APPLICATION_PATH=/Users/moritakeikuni/development/flutter_aplication_1
 COCOAPODS_PARALLEL_CODE_SIGN=true
-FLUTTER_TARGET=/Users/moritakeikuni/development/flutter_aplication_1/lib/main.dart
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
 EXCLUDED_ARCHS=arm64
-DART_DEFINES=RkxVVFRFUl9XRUJfQVVUT19ERVRFQ1Q9dHJ1ZQ==
 DART_OBFUSCATION=false
-TRACK_WIDGET_CREATION=true
+TRACK_WIDGET_CREATION=false
 TREE_SHAKE_ICONS=false
-PACKAGE_CONFIG=/Users/moritakeikuni/development/flutter_aplication_1/.dart_tool/package_config.json
+PACKAGE_CONFIG=.packages
