--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_platform_widgets: ^1.20.0
   provider: ^6.0.2
   google_fonts: ^3.0.0
+  firebase_core: ^1.17.0
 
 dev_dependencies:
   flutter_test:
