--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.0.2
   google_fonts: ^3.0.0
   firebase_core: ^1.17.0
+  cloud_firestore: ^3.1.16
 
 dev_dependencies:
   flutter_test:
