--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^3.0.0
   firebase_core: ^1.17.0
   cloud_firestore: ^3.1.16
+  geolocator: ^8.2.1
 
 dev_dependencies:
   flutter_test:
