--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,5 +30,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+            <!-- 位置情報取得 -->
+            <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     </application>
 </manifest>
