--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^3.1.16
   geolocator: ^8.2.1
   geocoding: ^2.0.4
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
