--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -5,6 +5,8 @@
   <!-- 位置情報取得用 -->
   <key>NSLocationWhenInUseUsageDescription</key>
   <string>This app needs access to location when open.</string>
+  <key>NSLocationAlwaysUsageDescription</key>
+  <string>This app needs access to location when in the background.</string>
   <!-- ここまで -->
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
