--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   geolocator: ^8.2.1
   geocoding: ^2.0.4
   intl: ^0.17.0
+  firebase_core_desktop: ^1.0.0
+  firebase_auth_desktop: ^1.0.0
+  firebase_auth: ^3.3.19
 
 dev_dependencies:
   flutter_test:
